# fw-template-erlang

./: .gitignore  ChangeLog  README  TODO  bootstrap  configure.ac.local
fw-pkgin/: config
fw.local/: Makefile.am.local
fw.local/m4/: Makefile.am  template_erlang.m4
fw.local/template/erlang/: .gitignore  Makefile.am.local  Makefile.otp  Makefile_dot_am  bootstrap  configure.ac  init  load-config  make-app-file  make-post-install  make-post-remove  make-pre-remove  oldrecord_trans.erl  release-ok  sonar-project.properties.in
fw.local/template/erlang/doc/: Makefile.am  Makefile_dot_am
fw.local/template/erlang/src/: Makefile.am  Makefile.am.local  Makefile_dot_am  fw-erl-app-template.app.in  myapp.erl
fw.local/template/erlang/tests/: Makefile.am  Makefile_dot_am  otp-test-wrapper.sh
tests/: .gitignore  Makefile.am.local  oldrecord_ok.erl  oldrecord_should_fail.erl  oldrecord_should_fail2.erl  postinst  postrm  prerm  test-hooks.in  test-oldrecord.sh  test-template.in  tmp.app
