mfourdir= $(prefix)/share/fw/m4

dist_mfour_DATA =               	\
  template_erlang.m4			\
  template_erlang_check_module.m4	\
  template_erlang_enable_erlrc.m4	\
  template_erlang_eunit_check.m4

MAINTAINERCLEANFILES =          \
  Makefile.in

include $(top_srcdir)/fw/build/automake/gnu-make-check.am
